# r-

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  docker-compose.yml  graph_info.json  run.bat  run.sh  useless_diagram.txt
client/: .gitignore  CMakeLists.txt  Doxyfile  README.md
client/include/: helloworld.hpp  main.hpp  window.hpp
client/include/app/: protocol.hpp  window.hpp
client/include/app/network/: asset.hpp  client.hpp  protocol.hpp  tcpsockmngr.hpp  udpsockmngr.hpp
client/include/app/res/: colors.hpp  string.hpp  theme.hpp
client/include/app/res/strings/: common.hpp  en.hpp  fr.hpp
client/include/app/res/themes/: dark.hpp  light.hpp
client/include/app/views/: home.hpp  loading.hpp
client/include/app/views/fragments/: bottombar.hpp  topbar.hpp
client/include/app/views/home/: home.hpp
client/include/components/: event.hpp  network.hpp  protocol.hpp  window.hpp
client/include/components/interfaces/: Ifragment.hpp  Iview.hpp
client/include/components/network/: request.hpp
client/include/components/structures/: bidimensional.hpp
client/include/data/: assets.hpp
client/include/sdk/: assets.hpp  event.hpp  network.hpp  protocol.hpp
client/include/sdk/interfaces/: Icolors.hpp  Ifragment.hpp  Istring.hpp  Itheme.hpp  Iview.hpp  Iwidget.hpp
client/include/sdk/managers/: event.hpp  inputs.hpp
client/include/sdk/structures/: bidimensional.hpp  keyboard.hpp
client/include/sdk/utils/: varlock.hpp
client/include/sdk/widgets/: button_image.hpp  button_text.hpp  image.hpp  load.hpp  loader.hpp  scroll.hpp  text.hpp  text_entry.hpp  video.hpp
client/include/views/: home.hpp  loading.hpp
client/include/views/fragments/: blue.hpp  bottombar.hpp  red.hpp  topbar.hpp
client/include/widget/: button_image.hpp  button_text.hpp  image.hpp  scroll.hpp  text.hpp  text_entry.hpp  video.hpp
client/src/: helloworld.cpp  main.cpp
client/src/app/: window.cpp
client/src/app/network/: client.cpp  protocol.cpp  tcpsockmngr.cpp  udpsockmngr.cpp
client/src/app/res/: colors.cpp
client/src/app/views/: home.cpp  loading.cpp
client/src/components/: event.cpp  network.cpp  window.cpp
client/src/components/interfaces/: Ifragment.cpp  Iview.cpp
client/src/sdk/: event.cpp  network.cpp
client/src/sdk/interfaces/: Icolors.cpp  Ifragment.cpp  Istring.cpp  Iview.cpp  Iwidget.cpp
client/src/sdk/managers/: event.cpp  inputs.cpp
client/src/sdk/widgets/: button_image.cpp  button_text.cpp  image.cpp  loader.cpp  text.cpp  text_entry.cpp
client/src/views/: home.cpp  loading.cpp
client/src/views/fragments/: blue.cpp  bottombar.cpp  red.cpp  topbar.cpp
client/test/: CMakeLists.txt  helloworld_ut.cpp  test.cpp  varlock_test.cpp
client/test/server/: CMakeLists.txt  conanfile.txt
client/test/server/tcp/: CMakeLists.txt
client/test/server/udp/: CMakeLists.txt
draft/: CMakeLists.txt  assets
draft/assets/: player_ships.json
draft/include/: SfLocalDisplay.hpp  SfmlKeyMapping.hpp  SfmlModule.hpp
draft/include/components/: CollisionBox.hpp  GameObject.hpp  PlayerControlled.hpp
draft/source/: LevelState.cpp  SfLocalDisplay.cpp  SfmlAudioModule.cpp  SfmlModule.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/: ComponentStorage.hpp  Game.hpp  Modules.hpp  Snitch.hpp  System.hpp  System.tpp  SystemStorage.hpp  function_traits.hpp
engine/include/components/: Sprite.hpp  Transform.hpp  Velocity.hpp
engine/include/states/: DebugState.hpp
engine/include/systems/: InputHandler.hpp  InputHandler.tpp
engine/source/: ComponentStorage.cpp  Game.cpp  Snitch.cpp  StateMachine.cpp  System.cpp  SystemStorage.cpp
engine/source/components/: Transform.cpp
engine/source/states/: DebugState.cpp
engine/tests/: ComponentStorageTests.cpp  StateMachineTests.cpp  SystemTest.cpp
server/: CMakeLists.txt
server/assets/: blaster.json  bug.json  credits.json  dobkeratops.json  effects.json  enemy_flap.json  enemy_projectiles.json  explosions.json  level1.json  menus.json  player_projectiles.json  player_ships.json  space_background.json
server/include/: AssetsServer.hpp  ComponentStorage.hpp  CreditsState.hpp  Enemies.hpp  Game.hpp  GameOverState.hpp  GameServer.hpp  LevelState.hpp  LobbyState.hpp  Message.hpp  Modules.hpp  MsgQueue.hpp  Protocol.hpp  SfmlAudioModule.hpp  SfmlModule.hpp  StateMachine.hpp  Storage.hpp  System.hpp  System.tpp  TcpClient.hpp  TcpServer.hpp  UdpClient.hpp  UdpServer.hpp  function_traits.hpp  load_game.hpp
server/include/components/: AnimMontage.hpp  AnimationLoop.hpp  BackgroundMusic.hpp  BydoShooter.hpp  CollisionBox.hpp  DeathRattle.hpp  Destructible.hpp  Enemy.hpp  EnemyGroup.hpp  GameObject.hpp  Invulnerable.hpp  Lifetime.hpp  OrientedSprite.hpp  OrientedSprite.tpp  Paralyzed.hpp  PatternLoop.hpp  PlayerBarracks.hpp  PlayerScanner.hpp  PlayerShipController.hpp  RestrictionBox.hpp  Speaker.hpp  Trajectory.hpp  Transform.hpp  TurretSprite.hpp  WaveCannon.hpp  WormHole.hpp
server/include/interface/: IClient.hpp  IServer.hpp  TcpClient.hpp  TcpServer.hpp  UdpClient.hpp  UdpServer.hpp
server/include/systems/: rtype_systems.h
server/source/: AssetsServer.cpp  ComponentStorage.cpp  CreditsState.cpp  Enemies.cpp  Game.cpp  GameOverState.cpp  GameServer.cpp  LevelState.cpp  LobbyState.cpp  StateMachine.cpp  Storage.cpp  System.cpp  load_game.cpp  main.cpp
server/source/components/: AnimMontage.cpp  AnimationLoop.cpp  Enemy.cpp  OrientedSprite.cpp  PatternLoop.cpp  PlayerScanner.cpp  PlayerShipController.cpp  Speaker.cpp  Transform.cpp
server/source/systems/: audio.cpp  bydo_shooter.cpp  collisions.cpp  draw_animmontages.cpp  enemies_systems.cpp  move_enemies.cpp  movement.cpp  player_barracks.cpp  playership.cpp  playership_animations.cpp  playership_ct_input_getter.cpp  reaper.cpp  run_animation_loops.cpp  run_pattern_loops.cpp  select_oriented_sprite.cpp  wave_cannon.cpp
server/tests/: ComponentStorageTests.cpp  StateMachineTests.cpp  SystemTest.cpp
server/tests/src/: args.rs  main.rs  server.rs  test_oriented_sprite.cpp
(+44 files in other folders)
